# bevy_ase

./: Cargo.toml
src/: handle_id.rs  lib.rs  loader.rs
src/asset/: animation.rs  ase.rs  slice.rs  tileset.rs
