[package]
name = "bevy_ase"
version = "0.6.0"
authors = [
	"Bruce Reif",
	"alpine_alpaca <alpine.alpaca.games@gmail.com>",
	"kleines Filmröllchen <filmroellchen@serenityos.org>",
]
edition = "2021"

[dependencies]
bevy = "0.11.2"
asefile = "0.3.6"
anyhow = "1.0"
benimator = { version = "4.1", optional = true }

[profile.dev.package."*"]
opt-level = 2
